--- a/style.css
+++ b/style.css
@@ -25,29 +25,30 @@ body {
   position: fixed;
   top: 2rem;
   left: 2rem;
+
   display: flex;
   flex-direction: column;
-  align-items: center;
   gap: 48px;
-  padding: 1.2rem;
+
+  padding: 1rem;
   background: #3f4f5f;
   border-radius: 16px;
-  width: auto;
-  height: auto;
+
+  width: fit-content;
+  height: fit-content;
 }
 
-/* Icon sizing */
 .social-rail a {
+  width: 32px;
+  height: 32px;
+
   display: block;
 }
 
 .social-rail img {
-  width: 40px;
-  height: 40px;
-  max-width: 40px;
-  max-height: 40px;
-  flex-shrink: 0;
-  object-fit: contain;
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 /* Studio name bottom-right */
