--- a/style.css
+++ b/style.css
@@ -79,11 +79,11 @@ body::after {
 @keyframes fadeUp {
   from {
     opacity: 0;
-    transform: translate(-50%, -45%);
+    transform: translateX(-50%) translateY(30px);
   }
   to {
     opacity: 1;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%) translateY(0);
   }
 }
 
